2007-09-27	Dmitry Dulepov	<dmitry@typo3.org>

	* Another hanging recordset fixed
	* Added "@var"s to t3lib_TCEmain to simplify debugging with IDEs

2007-09-26	Dmitry Dulepov	<dmitry@typo3.org>

	* JavaScript minification is enabled in FE by default (config.minifyJS=1)

2007-09-25  Oliver Hader  <oh@inpublica.de>

	* (tweak) Created new directory for Services_JSON typo3/contrib/json/ and moved file from typo3/contrib/json.php to typo3/contrib/json/json.php
	* (feature) Added feature #6359: IRRE - Add config of parent record for label_userFunc used on a child record
	* (minor) Fixed bug: Page TSconfig isn't parsed correctly anymore after cleanup in Trunk

2007-09-24 Andreas Otto <andreas.otto@dkd.de>

	* Fixed bug #1471: Check if exif functions are available before using them.

2007-09-24	Dmitry Dulepov	<dmitry@typo3.org>

	* Added JavaScript minification feature (new function t3lib_div::minifyJavaScript)
	* Added minification of FE javascripts (including default js and onload handlers) if config.minifyJS is enabled

2007-09-23  Oliver Hader  <oh@inpublica.de>

	* (minor) Fixed hanging recordset in tslib_cObj

2007-09-23  Michael Stucki  <michael@typo3.org>

	* (minor) Fixed hanging recordset in t3lib_BEfunc

2007-09-22  Kasper Skaarhoj  <kasper2007@typo3.com>

	* Fixed t3lib_cli that negative numbers (like "-2") is not seen as a parameter
	* New option, $GLOBALS['TYPO3_CONF_VARS']['BE']['flexFormXMLincludeDiffBase'], means that flexforms will allow a new index extending all "vXX" fields to "vXX.vDEFbase" with a value holding the "vDEF" value when the "vXX" value was changed. Effectively this is a memory of the value you translated from. Used for diff'ing.
	* Introduced a new global hook, $GLOBALS['TYPO3_CONF_VARS']['SC_OPTIONS']['GLOBAL']['recStatInfoHooks'], with which you can insert HTML before a records icon in the page tree, web>List and Web>Page modules (and possibly more places where makes sense). Used in l10nmgr for adding a small localization icon.