@@ -37,6 +37,8 @@
 			<label index="noWebFolder">You cannot drag images from this folder (yellow) because it is internal on the server.</label>
 			<label index="currentLink">Current Link</label>
 			<label index="invalidChar">ERROR: Invalid character found in file path (%s). Cannot add the file!</label>
+			<label index="toggleSelection">Toggle selection</label>
+			<label index="importSelection">Import selection</label>
 		</languageKey>
 	</data>
 </T3locallang>
